# coastal-segformer-inference-demo

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.github/workflows/: tests.yml
configs/: example_demo.yml  example_inference.yml
docs/: claim_boundary.md  inference_scope.md
src/coastal_segformer_demo/: __init__.py  cli.py  config.py  demo.py  predictor.py  render.py  segformer_adapter.py  synthetic.py
src/coastal_segformer_inference/: __init__.py  cli.py  config.py  inference.py  predictor.py  render.py  segformer_adapter.py  synthetic.py  tiling.py
tests/: test_config.py  test_demo.py  test_inference.py  test_segformer_adapter.py  test_synthetic.py  test_tiling.py
