[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coastal-segformer-inference"
version = "0.1.1"
description = "SegFormer-ready coastal segmentation inference harness."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Giovanni Andrea Nocera" }
]
dependencies = [
  "numpy",
  "PyYAML",
  "Pillow"
]

[project.optional-dependencies]
segformer = ["torch", "transformers"]

[project.scripts]
coastal-segformer-inference = "coastal_segformer_inference.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
