[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coastal-segformer-inference"
version = "0.2.0"
description = "Coastal segmentation inference harness with an optional SegFormer checkpoint backend."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Giovanni Andrea Nocera" }
]
dependencies = [
  "numpy",
  "PyYAML",
  "Pillow"
]

keywords = [
  "earth-observation",
  "remote-sensing",
  "semantic-segmentation",
  "coastal-monitoring",
  "segformer"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS"
]

[project.urls]
Homepage = "https://github.com/giovanninocera/coastal-segformer-inference"
Repository = "https://github.com/giovanninocera/coastal-segformer-inference"
Issues = "https://github.com/giovanninocera/coastal-segformer-inference/issues"

[project.optional-dependencies]
segformer = ["torch", "transformers"]

[project.scripts]
coastal-segformer-inference = "coastal_segformer_inference.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
coastal_segformer_inference = ["assets/*.png"]
